[package]
name = "pebble-sys"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Low-level FFI bindings for Pebble (watch) SDK 4.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/pebble-sys"
homepage = "https://github.com/Tamschi/pebble-sys/tree/v0.0.1"
documentation = "https://docs.rs/pebble-sys/0.0.1"
keywords = ["Pebble", "watch", "embedded", "FFI", "bindings"]
categories = ["hardware-support"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

autotests = false
autobenches = false
autoexamples = false

[badges]
travis-ci = { repository = "Tamschi/pebble-sys", branch = "develop" }
is-it-maintained-issue-resolution = { repository = "Tamschi/pebble-sys" }
is-it-maintained-open-issues = { repository = "Tamschi/pebble-sys" }
maintenance = { status = "experimental" }

[lib]
name = "pebble_sys"
test = false
doctest = false
bench = false
